# note-taker-mcp

./: .gitignore  README.md  pyproject.toml
note_taker_mcp/: index.py  server.py  storage.py
note_taker_mcp/tests/: test_index.py  test_server.py  test_storage.py
